# asm2048

./: .gitignore  2048.c  CMakeLists.txt  Makefile  README.md  demo.webm  main.c
src/: 2048.c  2048.h  Makefile  animate.c  animate.h  asm.h  buttons.c  buttons.h  colors.txt  draw.c  draw.h  game.c  game.h  main.c  window.h
src/asm/: board_add.S  board_clear.S  board_empty.S  board_max.S  constants.h
src/control/: buttons.c  buttons.h  game.c  game.h
src/draw/: animations.c  draw.c  draw.h  font.c  font.h  helpers.c
src/game/: 2048.c  2048.h  asm.h  board.c  constants.h  delta.c  game.c  game.h  game_board_clear.S  game_board_move_next_asm.S  game_board_out_of_moves.S  helpers.c  types.h
src/game/x86_64/: asm.h  game_board_clear.S  game_board_move_next_asm.S  game_board_out_of_moves.S
src/render/: animate.c  animate.h  append.c  buttons.h  draw.c  draw.h  helpers.c  render.c  types.h  update.c  values.c  values.h
src/window/: controls.c  controls.h  time.c  time.h  window.c  window.h
